# lean-loss-detection-agent

./: .env.example  .gitignore  HOW_TO_MERGE.md  LICENSE  MERGE_STATUS.md  PROJECT_SUMMARY.md  README.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.txt  app.py  pyproject.toml  requirements.txt  test_system.py
data/synthetic/: incident_reports.csv  production_logs.csv  quality_records.csv
docs/: architecture.md  timwoods_methodology.md  user_guide.md
src/: __init__.py
src/agents/: __init__.py  analyzer_agent.py  graph.py  parser_agent.py  recommender_agent.py
src/data/: __init__.py  loader.py  preprocessor.py  synthetic_generator.py
src/models/: __init__.py  schemas.py  timwoods.py
src/prompts/: __init__.py  templates.py
src/utils/: __init__.py  config.py
src/visualization/: __init__.py  charts.py
tests/: test_analyzer_agent.py  test_data_loader.py  test_parser_agent.py  test_recommender_agent.py
